// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemButton Рендер в закрытом состоянии 1`] = `
<div class="list-item-button">
</div>
`;

exports[`ListItemButton Рендер в открытом состоянии 1`] = `
<div class="is-open list-item-button">
</div>
`;
